# l2dcat

./: .gitignore  CMakeLists.txt  README.md
.github/: gcc-problem-matcher.json
.github/scripts/: build-unix.sh  build-windows.ps1
.github/workflows/: ci.yml
cmake/: AssetAudit.ps1  CheckLines.cmake  ContextMenuAudit.ps1  Cubism.cmake  CubismAssets.cmake  CubismShaderOptimize.cmake  CursorAudit.ps1  Dependencies.cmake  DropImportAudit.ps1  FocusAudit.ps1  Info.plist.in  InteractionAudit.ps1  LinuxUpdateKey.cmake  NativeRelease.cmake  OverlayAudit.ps1  PreferencesInteractionAudit.ps1  ReleaseOptimize.cmake  RuntimeFlowAudit.ps1  SoakAudit.ps1  ThemeImportAudit.ps1  VisualAudit.ps1  WheelAudit.ps1  WindowsStyleAudit.ps1  WriteUpdateManifest.cmake  WriteUpdatePayload.cmake  windows.manifest  windows_resources.rc.in
docs/: feature-audit.md  parity.md  system-audit-2026-07-17.md
include/bongo/: app.h  audio.h  common.h  config.h  file.h  gl_api.h  i18n.h  image.h  input.h  model.h  overlay.h  path.h  platform.h  preferences.h  sha256.h  shortcut.h  tray.h  update.h  update_manifest.h
include/bongo_cat_neo/: app.h  audio.h  common.h  config.h  file.h  gl_api.h  i18n.h  image.h  input.h  memory.h  model.h  mouse.h  overlay.h  path.h  platform.h  preferences.h  sha256.h  shortcut.h  tray.h
include/l2dcat/: app.h  audio.h  common.h  config.h  file.h  gl_api.h  i18n.h  image.h  input.h  memory.h  model.h  mouse.h  overlay.h  path.h  platform.h  preferences.h  sha256.h  shortcut.h  tray.h  update.h  update_manifest.h
resources/assets/locales/: en-US.json  pt-BR.json  vi-VN.json  zh-CN.json  zh-TW.json
resources/assets/models/standard/: live2d_motion1.flac
resources/icons/: icon.icns
resources/linux/: BongoCat.desktop  bongo-cat-neo.desktop  l2dcat.desktop
src/: main.c
src/core/: app_state.c  config_defaults.c  config_io.c  error.c  file.c  i18n.c  input_state.c  model_behavior.c  model_catalog.c  mouse_tracking.c  path.c  sha256.c  shortcut.c  update_manifest.c  windows_utf8.c  windows_utf8.h
src/live2d/: cubism_bridge.cpp  cubism_model.hpp  cubism_model_load.cpp  cubism_model_update.cpp  live2d_stub.c
src/media/: audio.c  image.c  stb_image_impl.c
src/platform/: linux.c  linux_internal.h  linux_menu.c  linux_update_verify.c  linux_update_verify.h  linux_x11.c  macos.m  macos_input.m  macos_internal.h  macos_keys.h  macos_keys.m  macos_menu.m  macos_update.m  memory.c  posix_http.c  windows.c  windows_assets.c  windows_borderless.c  windows_borderless.h  windows_http.c  windows_keys.c  windows_keys.h  windows_pointer.c  windows_update.c
src/render/: gl_api.c  overlay.c
src/runtime/: app.c  assets.c  frame_audit.c  gamepad.c  live2d_audit.c  model_files.c  model_import.c  model_import.h  model_import_discovery.c  model_import_legacy.c  model_import_legacy_image.c  model_import_legacy_internal.h  mouse.c  runtime.h  runtime_flow.c  shortcuts.c  tray.c  update.c  window.c  window_geometry.c  window_hit.c  window_wheel.c
src/tools/: asset_packer.cpp
src/ui/: nuklear_config.h  preferences.c  preferences_controls.c  preferences_controls.h  preferences_dialog.c  preferences_import.c  preferences_internal.h  preferences_live_resize.c  preferences_model.c  preferences_notice.c  preferences_notice.h  preferences_pages.c  preferences_render.c  preferences_shortcuts.c  preferences_state.h  preferences_widgets.c  preferences_widgets.h  ui_backend.c  ui_backend.h  ui_catime.c  ui_catime.h  ui_catime_theme.c  ui_cursor.c  ui_font.c  ui_font.h  ui_font_atlas.c  ui_font_atlas.h  ui_input.c  ui_native_theme.c  ui_native_theme.h  ui_sidebar.c  ui_sidebar.h  ui_theme.c  ui_theme.h
tests/: test.h  test_app_state.c  test_config.c  test_i18n.c  test_input.c  test_linux_update.c  test_main.c  test_models.c  test_nuklear.c  test_shortcut.c  test_update.c
